--- a/aboutMe/aboutme.html
+++ b/aboutMe/aboutme.html
@@ -215,13 +215,13 @@
                     id="0"
                     name="check"
                   />
-                  <label class="watch-label" for="0">Посмотрел</label>
+                  <label class="watch-label" for="0">Done it</label>
                 </div>
               </li>
               <li class="watch__item">
                 <div class="watch__item-hidden"></div>
                 <div class="watch__img">
-                  <img src="img/lesson/flex.jpg" alt="js" class="watch__icon" />
+                  <img src="img/lesson/metanit.jpg" alt="js" class="watch__icon" />
                 </div>
                 <div class="watch__info">
                   <div class="watch__title">
@@ -247,14 +247,14 @@
                     id="5"
                     name="check"
                   />
-                  <label class="watch-label" for="5">Посмотрел</label>
+                  <label class="watch-label" for="5">Done it</label>
                 </div>
               </li>
               <li class="watch__item ">
                 <div class="watch__item-hidden"></div>
                 <div class="watch__img">
                   <img
-                    src="img/lesson/lesson1.png"
+                    src="img/lesson/puppeteer.jpg"
                     alt="js"
                     class="watch__icon"
                   />
@@ -283,13 +283,13 @@
                     id="1"
                     name="check"
                   />
-                  <label class="watch-label" for="1">Посмотрел</label>
+                  <label class="watch-label" for="1">Done it</label>
                 </div>
               </li>
               <li class="watch__item">
                 <div class="watch__item-hidden"></div>
                 <div class="watch__img">
-                  <img src="img/lesson/base.jpg" alt="js" class="watch__icon" />
+                  <img src="img/lesson/jest.jpg" alt="js" class="watch__icon" />
                 </div>
                 <div class="watch__info">
                   <div class="watch__title">
@@ -315,13 +315,13 @@
                     id="2"
                     name="check"
                   />
-                  <label class="watch-label" for="2">Посмотрел</label>
+                  <label class="watch-label" for="2">Done it</label>
                 </div>
               </li>
               <li class="watch__item">
                 <div class="watch__item-hidden"></div>
                 <div class="watch__img">
-                  <img src="img/lesson/adap.jpg" alt="js" class="watch__icon" />
+                  <img src="img/lesson/node.jpg" alt="js" class="watch__icon" />
                 </div>
                 <div class="watch__info">
                   <div class="watch__title">
@@ -348,13 +348,13 @@
                     id="3"
                     name="check"
                   />
-                  <label class="watch-label" for="3">Посмотрел</label>
+                  <label class="watch-label" for="3">Done it</label>
                 </div>
               </li>
               <li class="watch__item">
                 <div class="watch__item-hidden"></div>
                 <div class="watch__img">
-                  <img src="img/lesson/gall.jpg" alt="js" class="watch__icon" />
+                  <img src="img/lesson/maxf.jpg" alt="js" class="watch__icon" />
                 </div>
                 <div class="watch__info">
                   <div class="watch__title">
@@ -377,7 +377,7 @@
                     id="4"
                     name="check"
                   />
-                  <label class="watch-label" for="4">Посмотрел</label>
+                  <label class="watch-label" for="4">Done it</label>
                 </div>
               </li>
             </ul>
